[Issue-2291] Clean up store initialization (#2513)