@@ -47,7 +47,7 @@ public abstract class AbstractStoreTest {
     final StorePruningOptions pruningOptions =
         StorePruningOptions.create(cacheSize, cacheSize, cacheSize);
 
-    final Store store = createGenesisStore(pruningOptions);
+    final UpdatableStore store = createGenesisStore(pruningOptions);
     final List<SignedBlockAndState> blocks =
         chainBuilder.generateBlocksUpToSlot(cacheMultiplier * cacheSize);
 
@@ -73,7 +73,7 @@ public abstract class AbstractStoreTest {
     final StorePruningOptions pruningOptions =
         StorePruningOptions.create(cacheSize, cacheSize, cacheSize);
 
-    final Store store = createGenesisStore(pruningOptions);
+    final UpdatableStore store = createGenesisStore(pruningOptions);
     while (chainBuilder.getLatestEpoch().longValue() < epochsToProcess) {
       SignedBlockAndState block = chainBuilder.generateNextBlock();
       addBlock(store, block);
@@ -96,35 +96,39 @@ public abstract class AbstractStoreTest {
     allCheckpoints.forEach(c -> chainProcessor.accept(store, c));
   }
 
-  protected void addBlock(final Store store, final SignedBlockAndState block) {
+  protected void addBlock(final UpdatableStore store, final SignedBlockAndState block) {
     addBlocks(store, List.of(block));
   }
 
-  protected void addBlocks(final Store store, final List<SignedBlockAndState> blocks) {
+  protected void addBlocks(final UpdatableStore store, final List<SignedBlockAndState> blocks) {
     final UpdatableStore.StoreTransaction tx = store.startTransaction(storageUpdateChannel);
     blocks.forEach(tx::putBlockAndState);
     assertThat(tx.commit()).isCompletedWithValue(null);
   }
 
-  protected Store createGenesisStore() {
+  protected UpdatableStore createGenesisStore() {
     return createGenesisStore(StorePruningOptions.createDefault());
   }
 
-  protected Store createGenesisStore(final StorePruningOptions pruningOptions) {
+  protected UpdatableStore createGenesisStore(final StorePruningOptions pruningOptions) {
     final SignedBlockAndState genesis = chainBuilder.generateGenesis();
     final Checkpoint genesisCheckpoint = chainBuilder.getCurrentCheckpointForEpoch(0);
-    return new Store(
-        new StubMetricsSystem(),
-        blockProviderFromChainBuilder(),
-        genesis.getState().getGenesis_time(),
-        genesis.getState().getGenesis_time(),
-        genesisCheckpoint,
-        genesisCheckpoint,
-        genesisCheckpoint,
-        Map.of(genesis.getRoot(), genesis.getParentRoot()),
-        genesis,
-        Collections.emptyMap(),
-        pruningOptions);
+    final SafeFuture<UpdatableStore> result =
+        Store.create(
+            new StubMetricsSystem(),
+            blockProviderFromChainBuilder(),
+            genesis.getState().getGenesis_time(),
+            genesis.getState().getGenesis_time(),
+            genesisCheckpoint,
+            genesisCheckpoint,
+            genesisCheckpoint,
+            Map.of(genesis.getRoot(), genesis.getParentRoot()),
+            genesis,
+            Collections.emptyMap(),
+            pruningOptions);
+
+    assertThat(result).isCompleted();
+    return result.join();
   }
 
   protected BlockProvider blockProviderFromChainBuilder() {
